added-subscribe-end-point-to-documentation
